--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,7 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>pose_cnn</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>roslaunch</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
