catkin_lint fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,19 @@ add_compile_options(-std=c++11)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  cv_bridge
+  dynamic_reconfigure
+  message_generation
+  pcl_ros
   pose_cnn
+  rosbag
   roscpp
   roslaunch
   rospy
-  vision_msgs
+  sensor_msgs
+  tf2_geometry_msgs
   tf2_ros
-  pose_cnn
-  dynamic_reconfigure
-  pcl_ros
+  vision_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -111,7 +115,7 @@ generate_dynamic_reconfigure_options(
 catkin_package(
  INCLUDE_DIRS include
  # LIBRARIES database_loader
- CATKIN_DEPENDS message_runtime roscpp rospy sensor_msgs std_msgs pose_cnn
+ CATKIN_DEPENDS message_runtime pose_cnn roscpp rospy sensor_msgs tf2_geometry_msgs vision_msgs
 #  DEPENDS system_lib
 )
 
@@ -172,26 +176,25 @@ target_link_libraries(visualizer
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
 
-## Mark executables and/or libraries for installation
-# install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
 
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
+# Mark executables and/or libraries for installation
+install(TARGETS visualizer
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
+# Mark cpp header files for installation
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+)
+
+# Mark other files for installation (e.g. launch and bag files, etc.)
+install(FILES
+  launch/posecnn_eval.launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
 
 #############
 ## Testing ##
