--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ add_compile_options(-std=c++11)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  pose_cnn
   roscpp
   rospy
   vision_msgs
@@ -126,9 +125,9 @@ include_directories(
 )
 
 ## Declare a C++ library
-# add_library(database_loader
-#   src/database_loader.cpp
-# )
+add_library(${PROJECT_NAME}_model_loader
+  src/model_loader.cpp
+)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -138,25 +137,30 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(visualizer src/visualizer.cpp)
+add_executable(${PROJECT_NAME}_visualizer src/visualizer.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
+set_target_properties(${PROJECT_NAME}_visualizer PROPERTIES OUTPUT_NAME visualizer PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(visualizer ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME}_visualizer ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 
-target_link_libraries(visualizer
+target_link_libraries(${PROJECT_NAME}_visualizer
   ${catkin_LIBRARIES}
-  database_loader
+  ${PROJECT_NAME}_model_loader
+  yaml-cpp
 )
 
+target_link_libraries(${PROJECT_NAME}_model_loader
+  ${catkin_LIBRARIES}
+  yaml-cpp
+)
 #############
 ## Install ##
 #############
