--- a/cfg/visualizer.cfg
+++ b/cfg/visualizer.cfg
@@ -5,6 +5,16 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
+offset = gen.add_group("Offset")
+
+selection = gen.add_group("Selection")
+
+icp = gen.add_group("ICP_Parameters")
+
+voxel = gen.add_group("Voxel_Grid_Parameters")
+
+ransac = gen.add_group("RANSAC_Parameters")
+
 size_enum = gen.enum([ gen.const("astra",      str_t, "astra", "Orbbec Astra"),
                        gen.const("basler_tof",     str_t, "basler_tof", "Basler ToF"),
                        gen.const("ensenso",      str_t, "ensenso", "Ensenso N35"),
@@ -49,22 +59,33 @@ scene_enum = gen.enum([gen.const("003_004_024_025_061_clutter",     str_t, "003_
                        gen.const("037_051_052_061", str_t, "037_051_052_061", "Scene")],
                      "Camera selection")
 
+selection.add("camera", str_t, 0, "Camera selection", "ensenso", edit_method=size_enum)
 
+selection.add("scene", str_t, 1, "Scene selection", "006_011_021_035_clutter", edit_method=scene_enum)
 
+selection.add("position",    int_t,    4, "Camera Position to be visualized.", 4, 0,   8)
 
-gen.add("camera", str_t, 0, "Camera selection", "ensenso", edit_method=size_enum)
+offset.add("pos_offset_x",    double_t,    2, "Positional offset for ground truth visualization.", 0, -1, 1)
+offset.add("pos_offset_y",    double_t,    2, "Positional offset for ground truth visualization.", 0, -1, 1)
+offset.add("pos_offset_z",    double_t,    2, "Positional offset for ground truth visualization.", 0, -1, 1)
 
-gen.add("scene", str_t, 0, "Scene selection", "006_011_021_035_clutter", edit_method=scene_enum)
+offset.add("rot_offset_x",    double_t,    2, "Rotational offset for ground truth visualization.", 0, -1, 1)
+offset.add("rot_offset_y",    double_t,    2, "Rotational offset for ground truth visualization.", 0, -1, 1)
+offset.add("rot_offset_z",    double_t,    2, "Rotational offset for ground truth visualization.", 0, -1, 1)
+offset.add("rot_offset_w",    double_t,    2, "Rotational offset for ground truth visualization.", 1, -1, 1)
 
-gen.add("position",    int_t,    0, "Camera Position to be visualized.", 4, 0,   8)
+offset.add("save_on_change",   bool_t,   0, "Toggles save feature for offset",  False)
 
-gen.add("pos_offset_x",    double_t,    0, "Positional offset for ground truth visualization.", 0, -1, 1)
-gen.add("pos_offset_y",    double_t,    0, "Positional offset for ground truth visualization.", 0, -1, 1)
-gen.add("pos_offset_z",    double_t,    0, "Positional offset for ground truth visualization.", 0, -1, 1)
+icp.add("icp_max_correspondence_distance", double_t, 0, "Max Correspondence Distance for ICP",    0.02, 0,   1)
+icp.add("icp_transformation_epsilon",    double_t,    0, "Transformation Epsilon for ICP", 1e-9, 0,   1)
+icp.add("icp_euclidean_fitness_epsilon",   double_t,   0, "Euclidean Fitness Epsilon for ICP",  5e-9, 0, 1)
+icp.add("icp_iterations",   int_t,   2, "Max ICP iterations",  100, 0, 10000000)
 
-gen.add("rot_offset_x",    double_t,    0, "Rotational offset for ground truth visualization.", 0, -1, 1)
-gen.add("rot_offset_y",    double_t,    0, "Rotational offset for ground truth visualization.", 0, -1, 1)
-gen.add("rot_offset_z",    double_t,    0, "Rotational offset for ground truth visualization.", 0, -1, 1)
-gen.add("rot_offset_w",    double_t,    0, "Rotational offset for ground truth visualization.", 1, -1, 1)
+voxel.add("voxel_grid_leaf_size", double_t, 0, "Leaf size for Voxel grid sampling.", 0.01, 0, 1)
+
+ransac.add("ransac_distance",    double_t,    0, "Inlier distance for RANSAC", 0.02, 0,   0.2)
+
+selection.add("remove_border_objects",   bool_t,   8, "Removes getriebelager and raceways from GT",  True)
+
 
 exit(gen.generate(PACKAGE, "ycb_multicam_dataset", "visualizer"))
